--- a/components/product-info.css
+++ b/components/product-info.css
@@ -6,7 +6,7 @@
 }
 
 .product-company {
-  color: var(--color-orange-500);
+  color: var(--color-grey-500);
   text-transform: uppercase;
 }
 
